--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,23 +13,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Copy project to server
+    - name: Copy project files to server via password
       uses: appleboy/scp-action@v0.1.7
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
+        password: ${{ secrets.SERVER_PASSWORD }}
         source: "."
         target: "/root/solar_bhai"
 
-    - name: Run deploy commands
+    - name: Run deploy commands on server
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
+        password: ${{ secrets.SERVER_PASSWORD }}
         script: |
-          cd /root/solar_bhai
+          cd /root/infinia
           pip install -r requirements.txt
           pkill -f "uvicorn" || true
-          nohup uvicorn app:app --host 0.0.0.0 --port 8000 --reload &
+          nohup uvicorn main:app --host 0.0.0.0 --port 8000 --reload &
