--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy FastAPI to Server
+name: Deploy FastAPI (Infinia) to Server
 
 on:
   push:
@@ -13,14 +13,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Copy project files to server via password
+    - name: Copy project files to server
       uses: appleboy/scp-action@v0.1.7
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         password: ${{ secrets.SERVER_PASSWORD }}
         source: "."
-        target: "/root/solar_bhai"
+        target: "/root/infinia"
 
     - name: Run deploy commands on server
       uses: appleboy/ssh-action@v1.0.0
@@ -30,6 +30,13 @@ jobs:
         password: ${{ secrets.SERVER_PASSWORD }}
         script: |
           cd /root/infinia
+          echo "🚀 Installing dependencies..."
           pip install -r requirements.txt
+          
+          echo "🧹 Stopping previous FastAPI instance..."
           pkill -f "uvicorn" || true
-          nohup uvicorn main:app --host 0.0.0.0 --port 8000 --reload &
+          
+          echo "▶️ Starting FastAPI app..."
+          nohup uvicorn main:app --host 0.0.0.0 --port 8000 --reload > app.log 2>&1 &
+          
+          echo "✅ Deployment completed!"
